adding the mind maps for cc.

--- a/Mind_Maps/cc-1.html
+++ b/Mind_Maps/cc-1.html
@@ -18,7 +18,7 @@
       <ul class="visible">
         <li>
           <div class="node-wrapper" onclick="toggle(this)">
-            <div class="node root">Cloud Computing</div>
+            <div class="node root">Introduction</div>
             <span class="toggle">►</span>
           </div>
           <ul>
