--- a/Mind_Maps/mad-5.html
+++ b/Mind_Maps/mad-5.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Lecture 6</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div style="text-align: right; margin-bottom: 7px;">
+    <button id="fullscreen-btn" title="Full screen"><img src="assets/images/fullscreen.png" alt="Full Screen" height="15px" width="15px"></button>
+  </div>
+  <div style="text-align: right; margin-bottom: 7px;">
+    <button id="zoom-in-btn" title="Zoom In">+</button>
+    <button id="zoom-out-btn" title="Zoom Out">-</button>
+  </div>
+  <div id="zoom-container">
 <div class="mindmap">
   <ul class="visible">
     <li>
@@ -98,3 +114,10 @@
     </li>
   </ul>
 </div>
+
+
+
+  </div>
+  <script src="app.js"></script>
+</body>
+</html>
