adding the mind maps for rm.

--- a/Mind_Maps/rm-4.html
+++ b/Mind_Maps/rm-4.html
@@ -20,7 +20,7 @@
       <ul class="visible">
         <li>
           <div class="node-wrapper" onclick="toggle(this)">
-            <div class="node root">أنواع البحث ومناهج (2)</div>
+            <div class="node root">أنواع البحث العلمي ومناهجه (2)</div>
             <span class="toggle">►</span>
           </div>
           <ul>
