adding the mind maps for rm.

--- a/Mind_Maps/rm-6.html
+++ b/Mind_Maps/rm-6.html
@@ -20,24 +20,10 @@
       <ul class="visible">
         <li>
           <div class="node-wrapper" onclick="toggle(this)">
-            <div class="node root">أدوات جمع المعلومات</div>
+            <div class="node root">جمع البيانات والمعلومات</div>
             <span class="toggle">►</span>
           </div>
           <ul>
-
-            <li>
-              <div class="node-wrapper" onclick="toggle(this)">
-                <div class="node">مخرجات التعلم</div>
-                <span class="toggle">►</span>
-              </div>
-              <ul>
-                <li><div class="node">يعدد أدوات جمع المعلومات</div></li>
-                <li><div class="node">يبين الفرق بين المصادر الأولية والثانوية</div></li>
-                <li><div class="node">يعرف الاستبيان وخطوات إنجازه</div></li>
-                <li><div class="node">يميز بين مزايا وعيوب أدوات جمع البيانات</div></li>
-                <li><div class="node">يوضح الصدق والثبات في أدوات البحث</div></li>
-              </ul>
-            </li>
 
             <li>
               <div class="node-wrapper" onclick="toggle(this)">
