--- a/Lexipedia-Cert-Verification/basmala.html
+++ b/Lexipedia-Cert-Verification/basmala.html
@@ -83,6 +83,7 @@
             document.getElementById('levelName').textContent = certificateData.levelName;
             document.getElementById('levelNumber').textContent = certificateData.levelNumber;
             document.getElementById('grade').textContent = certificateData.grade;
+            document.getElementById('grade').style = "color: green;";
             document.getElementById('issueDate').textContent = certificateData.issueDate;
             document.getElementById('certificateId').textContent = certificateData.id;
         });
