all sep 2025 certs

--- a/Lexipedia-Cert-Verification/LP-612M11A.html
+++ b/Lexipedia-Cert-Verification/LP-612M11A.html
@@ -75,12 +75,12 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const certificateData = {
-                id: 'LP-612L11A',
-                studentName: 'Basmala Mahmoud Ahmed',
+                id: 'LP-612M11A',
+                studentName: 'Fatima Mohammed Fuad',
                 levelName: 'Basics 1',
                 levelNumber: '1',
                 grade: 'A+',
-                score: '100 %',
+                score: '90 %',
                 issueDate: '26-8-2025',
             };
 
