--- a/Lexipedia-Cert-Verification/LP-612W11A.html
+++ b/Lexipedia-Cert-Verification/LP-612W11A.html
@@ -75,12 +75,12 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const certificateData = {
-                id: 'LP-612L11A',
-                studentName: 'Basmala Mahmoud Ahmed',
+                id: 'LP-612W11A',
+                studentName: 'Arwa Abdullhafeez Mohammed',
                 levelName: 'Basics 1',
                 levelNumber: '1',
-                grade: 'A+',
-                score: '100 %',
+                grade: 'A',
+                score: '85.5 %',
                 issueDate: '26-8-2025',
             };
 
