--- a/Lexipedia-Cert-Verification/LP-612Y11A.html
+++ b/Lexipedia-Cert-Verification/LP-612Y11A.html
@@ -75,8 +75,8 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const certificateData = {
-                id: 'LP-612L11A',
-                studentName: 'Basmala Mahmoud Ahmed',
+                id: 'LP-612Y11A',
+                studentName: 'Zakeya Abdullah Hasan',
                 levelName: 'Basics 1',
                 levelNumber: '1',
                 grade: 'A+',
