--- a/Lexipedia-Cert-Verification/LP-612W11A.html
+++ b/Lexipedia-Cert-Verification/LP-612W11A.html
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-gradient-to-br from-blue-50 via-green-50 to-purple-50 flex items-center justify-center min-h-screen p-8 text-gray-900">
     <div id="app" class="w-full max-w-4xl">
-            <img src="LexiPedia__Logo.png" alt="Institute Logo" width=300>        
+            <a href="https://www.youtube.com/@LexiPedia-j3b" target="_blank"><img src="LexiPedia__Logo.png" alt="Institute Logo" width=300></a>        
             <div class="flex flex-col items-center space-y-8">
             <h2 class="text-3xl font-bold text-gray-800 flex items-center gap-2">
                 <!-- Checkmark SVG Icon -->
