--- a/Lexipedia-Cert-Verification/quiz-test.html
+++ b/Lexipedia-Cert-Verification/quiz-test.html
@@ -13,27 +13,31 @@
         .option-label {
             display: block;
             padding: 1rem;
-            border: 1px solid #e2e8f0;
+            border: 1px solid #4a5568;
             border-radius: 0.75rem;
             cursor: pointer;
             transition: all 0.2s ease-in-out;
             margin-bottom: 1rem;
+            color: #d1d5db; /* Lighter text color for dark theme */
         }
         .option-label:hover {
-            background-color: #f8fafc;
-            border-color: #3b82f6;
+            background-color: #374151;
+            border-color: #60a5fa;
         }
         .option-label.selected {
-            background-color: #dbeafe;
-            border-color: #2563eb;
+            background-color: #1e3a8a;
+            border-color: #3b82f6;
+            color: #ffffff;
         }
         .option-label.correct {
-            background-color: #dcfce7;
+            background-color: #14532d;
             border-color: #22c55e;
+            color: #ffffff;
         }
         .option-label.incorrect {
-            background-color: #fee2e2;
+            background-color: #7f1d1d;
             border-color: #ef4444;
+            color: #ffffff;
         }
         .btn {
             padding: 0.75rem 1.5rem;
@@ -44,35 +48,35 @@
             cursor: pointer;
         }
         .btn-primary {
-            background-color: #2563eb;
+            background-color: #3b82f6;
             color: white;
         }
         .btn-primary:hover {
-            background-color: #1d4ed8;
+            background-color: #2563eb;
         }
         .btn-secondary {
-            background-color: #e2e8f0;
-            color: #475569;
+            background-color: #4b5563;
+            color: #d1d5db;
         }
         .btn-secondary:hover {
-            background-color: #cbd5e1;
+            background-color: #6b7280;
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+<body class="bg-gray-900 flex items-center justify-center min-h-screen p-4">
 
     <main id="quiz-container" class="w-full max-w-3xl">
-        <div id="quiz-content" class="bg-white p-6 rounded-2xl shadow-lg">
-            <h1 class="text-3xl font-bold text-gray-800 text-center mb-6">HCI Quiz</h1>
+        <div id="quiz-content" class="bg-gray-800 p-6 rounded-2xl shadow-lg">
+            <h1 class="text-3xl font-bold text-white text-center mb-6">HCI Quiz 1</h1>
             <div id="all-questions-container" class="space-y-8"></div>
             <div class="text-center mt-10">
                 <button id="submit-btn" class="btn btn-primary">Submit Quiz</button>
             </div>
         </div>
 
-        <div id="results-screen" class="hidden bg-white p-6 rounded-2xl shadow-lg">
-            <h2 class="text-3xl font-bold text-center text-gray-800 mb-4">Quiz Completed!</h2>
-            <p id="score-text" class="text-2xl text-center text-gray-600 font-semibold mb-8"></p>
+        <div id="results-screen" class="hidden bg-gray-800 p-6 rounded-2xl shadow-lg">
+            <h2 class="text-3xl font-bold text-white text-center mb-4">Quiz Completed!</h2>
+            <p id="score-text" class="text-2xl text-gray-300 text-center font-semibold mb-8"></p>
             <div id="results-summary" class="space-y-6"></div>
             <div class="text-center mt-8">
                 <button id="restart-btn" class="btn btn-primary">Retake</button>
@@ -357,7 +361,7 @@
                 const questionDiv = document.createElement('div');
                 questionDiv.className = 'mb-8'; 
                 questionDiv.innerHTML = `
-                    <h2 class="text-xl font-semibold text-gray-700 mb-6">${questionIndex + 1}. ${question.question}</h2>
+                    <h2 class="text-xl font-semibold text-gray-300 mb-6">${questionIndex + 1}. ${question.question}</h2>
                     <div class="options-container space-y-4" data-index="${questionIndex}"></div>
                 `;
                 
@@ -436,17 +440,17 @@
 
                 const resultItem = document.createElement('div');
                 resultItem.className = 'p-4 border rounded-lg';
-                resultItem.classList.add(isCorrect ? 'border-green-300' : 'border-red-300', isCorrect ? 'bg-green-50' : 'bg-red-50');
+                resultItem.classList.add(isCorrect ? 'border-green-500' : 'border-red-500', isCorrect ? 'bg-green-800' : 'bg-red-800');
 
                 const userAnswerText = Array.isArray(userAnswer) ? userAnswer.join(', ') : userAnswer || 'Not answered';
                 const correctAnswerText = correctAnswers.join(', ');
                 const correctOption = question.answerOptions.find(opt => opt.isCorrect);
 
                 resultItem.innerHTML = `
-                    <p class="font-semibold text-gray-800">${index + 1}. ${question.question}</p>
-                    <p class="text-sm mt-2">Your answer: <span class="font-medium">${userAnswerText}</span></p>
-                    <p class="text-sm mt-1">Correct answer: <span class="font-medium">${correctAnswerText}</span></p>
-                    <p class="text-sm mt-3">Explanation: ${correctOption.rationale}</p>
+                    <p class="font-semibold text-white">${index + 1}. ${question.question}</p>
+                    <p class="text-sm mt-2 text-gray-300">Your answer: <span class="font-medium">${userAnswerText}</span></p>
+                    <p class="text-sm mt-1 text-gray-300">Correct answer: <span class="font-medium">${correctAnswerText}</span></p>
+                    <p class="text-sm mt-3 text-gray-300">Explanation: ${correctOption.rationale}</p>
                 `;
                 resultsSummaryEl.appendChild(resultItem);
             });
